# task-nerd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.db
src/task_nerd/: __init__.py  app.py  cli.py  config.py  database.py  models.py  utils.py
src/task_nerd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/task_nerd/screens/: __init__.py  dialogs.py  task_edit_modal.py
src/task_nerd/widgets/: __init__.py  header.py  task_list.py
