[project]
name = "task-nerd"
version = "0.5.0"
description = "A Textual TUI application"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "textual-dev>=1.7.0",
]

[project.scripts]
task-nerd = "task_nerd.app:main"
